*Empty MediaWiki Message*

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -34,3 +34,161 @@
 
 
 [[Category:Indimi]]
+
+[[ace:Bahsa Arab]]
+[[af:Arabies]]
+[[als:Arabische Sprache]]
+[[am:ዓረብኛ]]
+[[ang:Arabisc sprǣc]]
+[[ar:لغة عربية]]
+[[an:Idioma arabe]]
+[[arc:ܠܫܢܐ ܥܪܒܝܐ]]
+[[frp:Arabo]]
+[[ast:Árabe]]
+[[az:Ərəb dili]]
+[[bjn:Bahasa Arap]]
+[[bn:আরবি ভাষা]]
+[[zh-min-nan:A-la-pek-gí]]
+[[map-bms:Basa Arab]]
+[[be:Арабская мова]]
+[[be-x-old:Арабская мова]]
+[[bcl:Arabe]]
+[[bo:ཨ་རབ་སྐད།]]
+[[bs:Arapski jezik]]
+[[br:Arabeg unvan]]
+[[bg:Арабски език]]
+[[ca:Àrab]]
+[[cv:Арап чĕлхи]]
+[[ceb:Inarabigo]]
+[[cs:Arabština]]
+[[co:Lingua àraba]]
+[[cy:Arabeg]]
+[[da:Arabisk (sprog)]]
+[[de:Arabische Sprache]]
+[[dv:ޢަރަބި]]
+[[nv:Ásáí Bizaad]]
+[[dsb:Arabska rěc]]
+[[et:Araabia keel]]
+[[el:Αραβική γλώσσα]]
+[[eml:Areb]]
+[[es:Idioma árabe]]
+[[eo:Araba lingvo]]
+[[ext:Luenga árabi]]
+[[eu:Arabiera]]
+[[fa:زبان عربی]]
+[[hif:Arbii bhasa]]
+[[fo:Arábiskt mál]]
+[[fr:Arabe]]
+[[fy:Arabysk]]
+[[ga:An Araibis]]
+[[gv:Arabish]]
+[[gag:Arab dili]]
+[[gl:Lingua árabe]]
+[[gan:阿拉伯語]]
+[[hak:Â-lâ-pak-ngî]]
+[[xal:Арабмудин келн]]
+[[ko:아랍어]]
+[[haw:‘Ōlelo ‘Alapia]]
+[[hy:Արաբերեն]]
+[[hi:अरबी]]
+[[hsb:Arabšćina]]
+[[hr:Arapski jezik]]
+[[io:Arabiana linguo]]
+[[ilo:Pagsasao nga Arabe]]
+[[id:Bahasa Arab]]
+[[ia:Lingua arabe]]
+[[iu:ᐊᕋᕕ/aravi]]
+[[os:Араббаг æвзаг]]
+[[is:Arabíska]]
+[[it:Lingua araba]]
+[[he:ערבית]]
+[[jv:Basa Arab]]
+[[kn:ಅರಬ್ಬೀ ಭಾಷೆ]]
+[[krc:Араб тил]]
+[[ka:არაბული ენა]]
+[[kk:Араб тілі]]
+[[kw:Arabek]]
+[[ky:Араб тили]]
+[[sw:Kiarabu]]
+[[kv:Араб кыв]]
+[[kg:Kilabu]]
+[[ku:Zimanê erebî]]
+[[lad:Lingua arábiga]]
+[[lo:ພາສາອາຣັບ]]
+[[la:Lingua Arabica]]
+[[lv:Arābu valoda]]
+[[lt:Arabų kalba]]
+[[lij:Lengua àraba]]
+[[li:Arabisch]]
+[[ln:Liarabi]]
+[[lmo:Arab]]
+[[hu:Arab nyelv]]
+[[mk:Арапски јазик]]
+[[mg:Fiteny arabo]]
+[[ml:അറബി ഭാഷ]]
+[[mr:अरबी भाषा]]
+[[arz:لغه عربى]]
+[[ms:Bahasa Arab]]
+[[mdf:Арабонь кяль]]
+[[mn:Араб хэл]]
+[[nah:Arabiatlahtōlli]]
+[[nl:Arabisch]]
+[[ne:अरबी भाषा]]
+[[new:अरबी भाषा]]
+[[ja:アラビア語]]
+[[ce:Jarboyn mott]]
+[[pih:Erabek]]
+[[no:Arabisk]]
+[[nn:Arabisk]]
+[[nrm:Arabe]]
+[[oc:Arabi]]
+[[pa:ਅਰਬੀ ਭਾਸ਼ਾ]]
+[[pnb:عربی]]
+[[nds:Araabsche Spraak]]
+[[pl:Język arabski]]
+[[pt:Língua árabe]]
+[[kaa:Arab tili]]
+[[crh:Arap tili]]
+[[ro:Limba arabă]]
+[[qu:Arabya simi]]
+[[ru:Арабский язык]]
+[[sah:Араб тыла]]
+[[se:Arábagiella]]
+[[sa:अरबी]]
+[[sco:Arabic]]
+[[sq:Gjuha arabe]]
+[[scn:Lingua àrabba]]
+[[simple:Arabic language]]
+[[sk:Arabčina]]
+[[cu:Ара́вьскъ ѩꙁꙑ́къ]]
+[[sl:Arabščina]]
+[[so:Carabi]]
+[[sr:Арапски језик]]
+[[sh:Arapski jezik]]
+[[su:Basa Arab]]
+[[fi:Arabian kieli]]
+[[sv:Arabiska]]
+[[tl:Wikang Arabe]]
+[[ta:அரபு மொழி]]
+[[kab:Taɛrabt]]
+[[tt:Ğäräp tele]]
+[[te:అరబ్బీ భాష]]
+[[th:ภาษาอาหรับ]]
+[[tg:Забони арабӣ]]
+[[tr:Arapça]]
+[[tk:Arap dili]]
+[[uk:Арабська мова]]
+[[ur:عربی زبان]]
+[[ug:ئەرەب تىلى]]
+[[vi:Tiếng Ả Rập]]
+[[fiu-vro:Araabia kiil]]
+[[wa:Arabe]]
+[[zh-classical:阿拉伯語]]
+[[war:Inarabo]]
+[[wuu:阿拉伯语]]
+[[yi:אראביש]]
+[[yo:Ède Lárúbáwá]]
+[[zh-yue:阿剌伯話]]
+[[diq:Erebki]]
+[[bat-smg:Arabu kalba]]
+[[zh:阿拉伯语]]
