--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -1,7 +1,7 @@
 [[File:Arabic Language.PNG|thumb|250px|<font color="grey">Ikarita y’Icyarabu</font>]]
 [[File:Arabic albayancalligraphy.svg|thumb|250px|<font color="grey">العربية = Al-ʿArabiyya</font>]]
 
-'''Icyarabu''' (izina mu cyarabu : '''العربية ''' ) ni [[ururimi]] rw’[[abarabu]] na rwa [[Aligeriya]], [[Arabiya Sawudite]], [[Bahirayini]], [[Cade]], [[Eritereya]], [[Irake]], [[Isirayeli]], [[Jibuti]], [[Katari]], [[Komore]], [[Koweti]], [[Libani]], [[Libiya]], [[Maroke]], [[Misiri]], [[Moritaniya]], [[Nyarabu Zunze Ubumwe]], [[Omani]], [[Palestine]], [[Siriya]], [[Somaliya]], [[Sudani]], [[Tunisiya]], [[Yemeni]] na [[Yorudani]]. 
+'''Icyarabu''' (izina mu cyarabu : '''العربية ''' cyangwa '''لغة عربية''' ) ni [[ururimi]] rw’[[abarabu]] na rwa [[Aligeriya]], [[Arabiya Sawudite]], [[Bahirayini]], [[Cade]], [[Eritereya]], [[Irake]], [[Isirayeli]], [[Jibuti]], [[Katari]], [[Komore]], [[Koweti]], [[Libani]], [[Libiya]], [[Maroke]], [[Misiri]], [[Moritaniya]], [[Nyarabu Zunze Ubumwe]], [[Omani]], [[Palestine]], [[Siriya]], [[Somaliya]], [[Sudani]], [[Tunisiya]], [[Yemeni]] na [[Yorudani]]. 
 
 [[Abaisilamu]] bazi ko icyarabu ari rwo rurimi rwera.
 
