*Empty MediaWiki Message*

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -3,7 +3,7 @@
 
 '''Icyarabu''' (izina mu cyarabu : '''العربية ''' cyangwa '''لغة عربية''' ) ni [[ururimi]] rw’[[abarabu]] na rwa [[Aligeriya]], [[Arabiya Sawudite]], [[Bahirayini]], [[Cade]], [[Eritereya]], [[Irake]], [[Isirayeli]], [[Jibuti]], [[Katari]], [[Komore]], [[Koweti]], [[Libani]], [[Libiya]], [[Maroke]], [[Misiri]], [[Moritaniya]], [[Nyarabu Zunze Ubumwe]], [[Omani]], [[Palestine]], [[Siriya]], [[Somaliya]], [[Sudani]], [[Tunisiya]], [[Yemeni]] na [[Yorudani]]. 
 
-[[Abaisilamu]] bazi ko icyarabu ari rwo rurimi rwera.
+[[Abayisilamu]] bazi ko icyarabu ari rwo rurimi rwera.
 
 == Amagambo n'interuro mu cyarabu ==
 
