Redirected page to [[Ikirundi]]

--- a/Kirundi.mw
+++ b/Kirundi.mw
@@ -1,40 +1,1 @@
-'''Ikirundi''' ni urulimi rw’[[Abarundi]]. Ikirundi gisa n’[[Ikinyarwanda]], urulimi rw’u [[Rwanda]], n’Igiha, urulimi rwo muri [[Tanzaniya]].
-
-== Ikirundi n’Ikinyarwanda ==
-*'''icongereza''' icyongereza
-*'''canke''' cyangwa
- 
-[[Category:Afurika]]
-[[Category:Indimi]]
-[[Category:Burundi]]
-
-[[az:Kirundi]]
-[[bg:Кирунди]]
-[[cs:Kirundi]]
-[[de:Kirundi]]
-[[en:Kirundi]]
-[[eo:Burunda lingvo]]
-[[es:Idioma kirundi]]
-[[fi:Kirundi]]
-[[fr:Kirundi]]
-[[he:קירונדי]]
-[[hr:Rundi jezik]]
-[[id:Bahasa Kirundi]]
-[[it:Lingua kirundi]]
-[[ja:ルンディ語]]
-[[lv:Kirundi]]
-[[ms:Bahasa Kirundi]]
-[[nl:Kirundi]]
-[[no:Kirundi]]
-[[nov:Rundum]]
-[[pl:Język rundi]]
-[[pt:Língua kirundi]]
-[[qu:Rundi simi]]
-[[rn:Kirundi]]
-[[ru:Рунди (язык)]]
-[[sco:Kirundi]]
-[[sv:Kirundi]]
-[[ta:கிருண்டி மொழி]]
-[[tr:Kirundi]]
-[[uk:Кірунді]]
-[[zh:基隆迪语]]
+#REDIRECT  [[Ikirundi]]
