*Empty MediaWiki Message*

--- a/Ikirundi.mw
+++ b/Ikirundi.mw
@@ -3,9 +3,8 @@
 == Ikirundi n’Ikinyarwanda ==
 *'''icongereza''' icyongereza
 *'''canke''' cyangwa
- 
-[[Category:Afurika]]
-[[Category:Indimi]]
+  
+[[Category:Indimi z’ikibantu]]
 [[Category:Burundi]]
 
 [[az:Kirundi]]
