--- a/Icyace.mw
+++ b/Icyace.mw
@@ -2,6 +2,20 @@
 
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
+== Imibare ==
+* '''sa''' – rimwe
+* '''duwa''' – kabiri
+* '''lhèë''' – gatatu
+* '''peuët''' – kane
+* '''limöng''' – gatanu
+* '''nam''' – gatandatu
+* '''tujôh''' – karindwi
+* '''lapan''' – umunani
+* '''sikureuëng''' – icyenda
+* '''siplôh''' – icumi
+* '''siblah''' – cumi na rimwe
+* '''duwablah''' – cumi na kaviri
+
 [[Category:Indimi]]
 
 [[ace:Bahsa Acèh]]
