--- a/Icyace.mw
+++ b/Icyace.mw
@@ -2,6 +2,8 @@
 
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
+== Amagambo n'interuro mu cyace ==
+
 == Imibare ==
 * '''sa''' – rimwe
 * '''duwa''' – kabiri
