/* Amagambo n'interuro mu cyace */

--- a/Icyace.mw
+++ b/Icyace.mw
@@ -3,6 +3,7 @@
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
 == Amagambo n'interuro mu cyace ==
+*'''eungkôt''' – ifi
 
 == Imibare ==
 * '''sa''' – rimwe
