--- a/Icyace.mw
+++ b/Icyace.mw
@@ -18,6 +18,23 @@
 * '''siplôh''' – icumi
 * '''siblah''' – cumi na rimwe
 * '''duwablah''' – cumi na kaviri
+* '''lhèëblah''' – cumi na gatatu
+* '''peuëtblah''' – cumi na kane
+* '''limöngblah''' – cumi na gatanu
+* '''namblah''' – cumi na gatandatu
+* '''tujôhblah''' – cumi na karindwi
+* '''lapanblah''' – cumi n’umunani
+* '''sikureuëngblah''' – cumi n’icyenda
+* '''duwaplôh''' – makumyabiri
+* '''duwaplôh sa''' – makumyabiri na rimwe
+* '''duwaplôh duwa''' – makumyabiri na kaviri
+* '''duwaplôh lhèë''' – makumyabiri na gatatu
+* '''duwaplôh peuët''' – makumyabiri na kane
+* '''duwaplôh limöng''' – makumyabiri na gatanu
+* '''duwaplôh nam''' – makumyabiri na gatandatu
+* '''duwaplôh tujôh''' – makumyabiri na karindwi
+* '''duwaplôh lapan''' – makumyabiri n’umunani
+* '''duwaplôh sikureuëng''' – makumyabiri n’icyenda
 
 [[Category:Indimi]]
 
