/* Amagambo n'interuro mu cyace */

--- a/Icyace.mw
+++ b/Icyace.mw
@@ -3,6 +3,12 @@
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
 == Amagambo n'interuro mu cyace ==
+* '''atawa''' – cyangwa
+* '''bahsa'' – ururimi
+* '''binatang''' – inyamaswa
+* '''asèë''' – imbwa
+* '''mië''' – injangwe
+* '''leumo''' – inka
 *'''eungkôt''' – ifi
 
 == Imibare ==
