/* Amagambo n'interuro mu cyace */

--- a/Icyace.mw
+++ b/Icyace.mw
@@ -9,7 +9,8 @@
 * '''asèë''' – imbwa
 * '''mië''' – injangwe
 * '''leumo''' – inka
-*'''eungkôt''' – ifi
+* '''cicém''' – inyoni
+* '''eungkôt''' – ifi
 
 == Imibare ==
 * '''sa''' – rimwe
