--- a/Icyace.mw
+++ b/Icyace.mw
@@ -4,7 +4,7 @@
 
 == Amagambo n'interuro mu cyace ==
 * '''atawa''' – cyangwa
-* '''bahsa'' – ururimi
+* '''bahsa''' – ururimi
 * '''binatang''' – inyamaswa
 * '''asèë''' – imbwa
 * '''mië''' – injangwe
