/* Amagambo n'interuro mu cyace */

--- a/Icyace.mw
+++ b/Icyace.mw
@@ -3,6 +3,8 @@
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
 == Amagambo n'interuro mu cyace ==
+* '''Peue haba?''' – Amakuru?
+* '''Haba gèt''' – Ni meza
 * '''atawa''' – cyangwa
 * '''bahsa''' – ururimi
 * '''binatang''' – inyamaswa
