--- a/Icyace.mw
+++ b/Icyace.mw
@@ -45,6 +45,8 @@
 * '''duwaplôh lapan''' – makumyabiri n’umunani
 * '''duwaplôh sikureuëng''' – makumyabiri n’icyenda
 
+== Imiyoboro ==
+*[http://www.ethnologue.com/show_language.asp?code=ace www.ethnologue.com]
 [[Category:Indimi]]
 
 [[ace:Bahsa Acèh]]
