--- a/Icyace.mw
+++ b/Icyace.mw
@@ -1,6 +1,6 @@
 [[File:IndonesiaAceh.png|thumb|250px|<font color="grey">Ikarita y’Icyace</font>]]
 
-'''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
+'''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]]. Itegekongenga [[ISO 639-3]] '''ace'''.
 
 == Amagambo n'interuro mu cyace ==
 * '''Peue haba?''' – Amakuru?
