--- a/Icyuveya.mw
+++ b/Icyuveya.mw
@@ -1,4 +1,4 @@
-'''Icyuveya''' (izina mu cyuveya: ''Fakaʻuvea'') ni [[ururimi]] rwa [[Walisi na Fatuna]]. 
+'''Icyuveya''' (izina mu cyuveya: ''Fakaʻuvea'') ni [[ururimi]] rwa [[Walisi na Fatuna]]. Itegekongenga [[ISO 639-3]] '''wls'''.
 
 == Alfabeti y’icyuveya ==
 Icyuveya kigizwe n’inyuguti 16 : a e f g h i k l m n o s t u v '
