*Empty MediaWiki Message*

--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -1,4 +1,4 @@
-'''Ikilazi''' (izina mu kilazi : ''lazuri nena'' ) ni [[ururimi]] rwa [[Turukiya]] na [[Geworugiya]]. 
+'''Ikilazi''' (izina mu kilazi : ''lazuri nena'' ) ni [[ururimi]] rwa [[Turukiya]] na [[Geworugiya]]. Itegekongenga [[ISO 639-3]] '''lzz'''.
 
 == Alfabeti y’ikilazi ==
 Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n o p p̌ r s ş t t̆ u v y z ž ʒ ǯ
