--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -1,6 +1,6 @@
 [[File:MapOfTurkishSpeakers.png|thumb|350px|<font color="grey">Ikarita y’Ikinyaturukiya</font>]]
 
-'''Igiturukiya''' cyangwa '''Igituruki''' , '''Ikinyaturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]] na rwa [[Turukiya]]. 
+'''Igiturukiya''' cyangwa '''Igituruki''' , '''Ikinyaturukiya''' ni [[ururimi]] rw’[[abanyaturukiya]] na rwa [[Turukiya]] na [[Shipure y’Amajyaruguru]]. Itegekongenga [[ISO 639-3]] '''tur'''.
 
 == Alfabeti y’ikinyaturukiya ==
 Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o ö p r s ş t u ü v y z
