--- a/Igikuyu.mw
+++ b/Igikuyu.mw
@@ -1,4 +1,4 @@
-'''Igikuyu''' cyangwa '''Ikikuyu''' (izina mu gikuyu : ''Gĩkũyũ'' ) ni [[ururimi]] rumwe mu zinini zo muri [[Kenya]]. Izindi zifite abantu benshi zo mu muryango w’Abantu ni [[Igikamba]] n'[[Ikiruya]]. Haba ni umuryango witwa Nilotiki urimo [[Ikimasayi]], [[Kalenjini]] n’[[Ikijyaluwo]]. Igikuyu gisangiye ibintu byinshi n’[[ikinyarwanda]] kubera ko zombi ziva indimwe ariko na none hari na byinshi by'umwihariko zisangiye bitaboneka mu zindi. Ikizwi cyane ni itegeko rigenga imivugire y’ingombajwi ryitwa irya Dahl (''Dahl's Law''). Riraza kuboneka hepfo mu ngero ziza gutangwa.
+'''Igikuyu''' cyangwa '''Ikikuyu''' (izina mu gikuyu : ''Gĩkũyũ'' ) ni [[ururimi]] rumwe mu zinini zo muri [[Kenya]]. Itegekongenga [[ISO 639-3]] '''kik'''. Izindi zifite abantu benshi zo mu muryango w’Abantu ni [[Igikamba]] n'[[Ikiruya]]. Haba ni umuryango witwa Nilotiki urimo [[Ikimasayi]], [[Kalenjini]] n’[[Ikijyaluwo]]. Igikuyu gisangiye ibintu byinshi n’[[ikinyarwanda]] kubera ko zombi ziva indimwe ariko na none hari na byinshi by'umwihariko zisangiye bitaboneka mu zindi. Ikizwi cyane ni itegeko rigenga imivugire y’ingombajwi ryitwa irya Dahl (''Dahl's Law''). Riraza kuboneka hepfo mu ngero ziza gutangwa.
 
 Muri iyi nyandiko, ndibanda cyane ku magambo izi ndimi zombi zisangiye, imiterere y’amagambo hamwe n’amategeko agenga imivugire y’uru rurimi.
 
