*Empty MediaWiki Message*

--- a/Ikirundi.mw
+++ b/Ikirundi.mw
@@ -1,4 +1,4 @@
-'''Ikirundi''' ni urulimi rw’[[Abarundi]]. Ikirundi gisa n’[[Ikinyarwanda]], urulimi rw’u [[Rwanda]], n’Igiha, urulimi rwo muri [[Tanzaniya]].
+'''Ikirundi''' ni urulimi rw’[[Abarundi]]. Itegekongenga [[ISO 639-3]] '''run'''. Ikirundi gisa n’[[Ikinyarwanda]], urulimi rw’u [[Rwanda]], n’Igiha, urulimi rwo muri [[Tanzaniya]].
 
 == Ikirundi n’Ikinyarwanda ==
 *'''icongereza''' icyongereza
