--- a/Ikilatini.mw
+++ b/Ikilatini.mw
@@ -1,4 +1,4 @@
-[[File:Rome Colosseum inscription 2.jpg|thumb|250px|<font color="green"> Ikilatini</font>]]
+[[File:Rome Colosseum inscription 2.jpg|thumb|250px|<font color="grey"> Ikilatini</font>]]
 
 '''Ikilatini''' (izina mu kilatini ''Lingua Latīna'') ni [[ururimi]] rwa kera zo mu [[Burayi]]. Itegekongenga [[ISO 639-3]] '''lat'''. [[Abagatolika]] bazi ko ikilatini ari rwo rurimi rwera.
 
