*Empty MediaWiki Message*

--- a/Ikigereki.mw
+++ b/Ikigereki.mw
@@ -1,6 +1,6 @@
 [[File:P46.jpg|thumb|250px|<font color="grey">Ikigereki</font>]]
 
-'''Ikigereki''' (izina mu kigereki : ''ελληνική γλώσσα'' ) ni [[ururimi]] rw’[[Ubugereki]]. 
+'''Ikigereki''' (izina mu kigereki : ''ελληνική γλώσσα'' ) ni [[ururimi]] rw’[[Ubugereki]] na [[Shipure]]. Itegekongenga [[ISO 639-3]] '''ell''' (indimi: grc, pnt,...).
 
 == Alfabeti y’kigereki ==
 Igifero kigizwe n’inyuguti 24 : α β γ δ ε ζ η θ ι κ λ μ ν ξ ο π ρ σ (ς) τ υ φ χ ψ ω
