*Empty MediaWiki Message*

--- a/Igifaransa.mw
+++ b/Igifaransa.mw
@@ -1,6 +1,6 @@
 [[File:New-Map-Francophone World.PNG|thumb|250px|<font color="grey">Ikarita y’Igifaransa</font>]]
 
-'''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by’[[Ubufaransa]], [[Ubusuwisi]] n’[[Ububirigi]].
+'''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by’[[Ubufaransa]], [[Ubusuwisi]] n’[[Ububirigi]]. Itegekongenga [[ISO 639-3]] '''fra'''.
 
 [[Category:Indimi z’igihinde-buraya]]
 
