*Empty MediaWiki Message*

--- a/Icyalubaniya.mw
+++ b/Icyalubaniya.mw
@@ -1,6 +1,6 @@
 [[File:Albanian language map.jpg|thumb|250px|<font color="grey">Ikarita y’Icyalubaniya</font>]]
 
-'''Icyalubaniya''' cyangwa '''Ikinyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]], [[Kosovo]], [[Ubutaliyani]] na [[Ubugereki]]. Itegekongenga [[ISO 639-3]] '''sqi'''.
+'''Icyalubaniya''' cyangwa '''Ikinyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]], [[Kosovo]], [[Masedoniya]], [[Ubutaliyani]] na [[Ubugereki]]. Itegekongenga [[ISO 639-3]] '''sqi'''.
 
 == Alfabeti y’Icyalubaniya ==
 Icyalubaniya kigizwe n’inyuguti 36 : a b c ç d dh e ë f g gj h i j k l ll m n nj o p q r rr s sh t th u v x xh y z zh
