*Empty MediaWiki Message*

--- a/Ikiyapani.mw
+++ b/Ikiyapani.mw
@@ -2,4 +2,9 @@
 
 '''Ikiyapani''' (izina mu kiyapani : '''日本語''' ) ni [[ururimi]] rwa [[Ubuyapani]] na ikirwa cya [[Angaur]] muri [[Palawu]]. Itegekongenga [[ISO 639-3]] '''jpn'''.
 
+== Hiragana ==
+
+== Katakana ==
+
 [[Category:Indimi]]
+[[Category:Ubuyapani]]
