*Empty MediaWiki Message*

--- a/Ikiyapani.mw
+++ b/Ikiyapani.mw
@@ -2,7 +2,8 @@
 
 '''Ikiyapani''' (izina mu kiyapani : '''日本語''' ) ni [[ururimi]] rwa [[Ubuyapani]] na ikirwa cya [[Angaur]] muri [[Palawu]]. Itegekongenga [[ISO 639-3]] '''jpn'''.
 
-== Hiragana ==
+== Alfabeti y’Ikiyapani ==
+=== Hiragana ===
 {| border="0" cellspacing="2px" cellpadding="2px" width="100%"
 |-
 |bgcolor="#BECFEB" valign=top align="center" colspan = 8 | [[Hiragana]]
@@ -165,7 +166,7 @@
 |bgcolor="#F3F5DE"|ぴょ ''pyo''
 |}
 
-== Katakana ==
+=== Katakana ===
 {| border="0" cellspacing="2px" cellpadding="2px" width="100%"
 |-
 |bgcolor="#BECFEB" valign=top align="center" colspan = 8 | [[Katakana]]
