*Empty MediaWiki Message*

--- a/Ikiyapani.mw
+++ b/Ikiyapani.mw
@@ -339,3 +339,138 @@
 
 [[Category:Indimi]]
 [[Category:Ubuyapani]]
+
+[[ace:Bahsa Jeupun]]
+[[af:Japannees]]
+[[als:Japanische Sprache]]
+[[ang:Iapanisc sprǣc]]
+[[ab:Иапон бызшәа]]
+[[ar:لغة يابانية]]
+[[an:Idioma chaponés]]
+[[ast:Xaponés]]
+[[az:Yapon dili]]
+[[bjn:Bahasa Japang]]
+[[bn:জাপানি ভাষা]]
+[[zh-min-nan:Ji̍t-pún-oē]]
+[[be:Японская мова]]
+[[be-x-old:Японская мова]]
+[[bcl:Hapones]]
+[[bar:Japanische Språch]]
+[[bo:ཉི་ཧོང་སྐད།]]
+[[bs:Japanski jezik]]
+[[br:Japaneg]]
+[[bg:Японски език]]
+[[ca:Japonès]]
+[[cv:Япон чĕлхи]]
+[[ceb:Hinapones]]
+[[cs:Japonština]]
+[[cy:Japaneg]]
+[[da:Japansk (sprog)]]
+[[de:Japanische Sprache]]
+[[dv:ޖަޕާނީ]]
+[[et:Jaapani keel]]
+[[el:Ιαπωνική γλώσσα]]
+[[es:Idioma japonés]]
+[[eo:Japana lingvo]]
+[[eu:Japoniera]]
+[[fa:زبان ژاپنی]]
+[[hif:Japanese bhasa]]
+[[fo:Japanskt mál]]
+[[fr:Japonais]]
+[[ga:Seapáinis]]
+[[gv:Shapaanish]]
+[[gd:Iapanais]]
+[[gl:Lingua xaponesa]]
+[[gan:日语]]
+[[hak:Ngi̍t-ngî]]
+[[xal:Нипонмудн келн]]
+[[ko:일본어]]
+[[hy:Ճապոներեն]]
+[[hi:जापानी भाषा]]
+[[hsb:Japanšćina]]
+[[hr:Japanski jezik]]
+[[io:Japoniana linguo]]
+[[ilo:Pagsasao a Japones]]
+[[id:Bahasa Jepang]]
+[[ia:Lingua japonese]]
+[[is:Japanska]]
+[[it:Lingua giapponese]]
+[[he:יפנית]]
+[[jv:Basa Jepang]]
+[[kn:ಜಪಾನಿ ಭಾಷೆ]]
+[[pam:Hapon (amanu)]]
+[[ka:იაპონური ენა]]
+[[kk:Жапон тілі]]
+[[kw:Nihonek]]
+[[sw:Kijapani]]
+[[ku:Zimanê japonî]]
+[[lad:Lingua japonesa]]
+[[la:Lingua Iaponica]]
+[[lv:Japāņu valoda]]
+[[lb:Japanesch]]
+[[lt:Japonų kalba]]
+[[li:Japans]]
+[[jbo:ponbau]]
+[[lmo:Lengua giapponesa]]
+[[hu:Japán nyelv]]
+[[mk:Јапонски јазик]]
+[[mg:Japonezy]]
+[[ml:ജാപ്പനീസ് ഭാഷ]]
+[[mr:जपानी भाषा]]
+[[arz:لغه يابانى]]
+[[ms:Bahasa Jepun]]
+[[cdo:Nĭk-buōng-ngṳ̄]]
+[[mdf:Япунонь кяль]]
+[[mn:Япон хэл]]
+[[my:ဂျပန်ဘာသာစကား]]
+[[nah:Xapontlahtōlli]]
+[[nl:Japans]]
+[[nds-nl:Japans]]
+[[new:जापानी भाषा]]
+[[ja:日本語]]
+[[ce:Yaponhoyn mott]]
+[[no:Japansk]]
+[[nn:Japansk språk]]
+[[oc:Japonés]]
+[[pnb:جاپانی]]
+[[km:ភាសាជប៉ុន]]
+[[pl:Język japoński]]
+[[pt:Língua japonesa]]
+[[ty:Reo Tāpōnē]]
+[[ro:Limba japoneză]]
+[[qu:Nihun simi]]
+[[ru:Японский язык]]
+[[sah:Дьоппуон тыла]]
+[[se:Japánagiella]]
+[[sco:Japanese leid]]
+[[sq:Gjuha japoneze]]
+[[scn:Lingua giappunisa]]
+[[simple:Japanese language]]
+[[sk:Japončina]]
+[[sl:Japonščina]]
+[[sr:Јапански језик]]
+[[sh:Japanski jezik]]
+[[su:Basa Jepang]]
+[[fi:Japanin kieli]]
+[[sv:Japanska]]
+[[tl:Wikang Hapones]]
+[[ta:ஜப்பானிய மொழி]]
+[[kab:Tajapunit]]
+[[tt:Yapon tele]]
+[[th:ภาษาญี่ปุ่น]]
+[[tg:Забони ҷопонӣ]]
+[[tr:Japonca]]
+[[tk:Ýapon dili]]
+[[uk:Японська мова]]
+[[ur:جاپانی (زبان)]]
+[[ug:ياپون تىلى]]
+[[vi:Tiếng Nhật]]
+[[fiu-vro:Jaapani kiil]]
+[[wa:Djaponès (lingaedje)]]
+[[war:Hinapon]]
+[[wuu:日语]]
+[[yi:יאפאניש]]
+[[yo:Èdè Japaní]]
+[[zh-yue:日文]]
+[[bat-smg:Japuonu kalba]]
+[[zh:日语]]
