*Empty MediaWiki Message*

--- a/Icyaragoneze.mw
+++ b/Icyaragoneze.mw
@@ -2,4 +2,8 @@
 
 '''Icyaragoneze''' (izina mu cyaragoneze : ''aragonés''  cyangwa ''idioma aragonés , luenga aragonesa , fabla aragonesa'' ) ni [[ururimi]] rwa [[Aragon]] muri [[Esipanye]]. Itegekongenga [[ISO 639-3]] '''arg'''.
 
+== Alfabeti y’Icyaragoneze  ==
+*A (Á) B C (CH) D E (É) F G (H) I (Í) (J) (K) L (LL) M N Ñ O (Ó) P Q R (RR) S T U (Ú) (V) (W) X Y Z
+*a (á) b c (ch) d e (é) f g (h) i (í) (j) (k) l (ll) m n ñ o (ó) p q r (rr) s t u (ú) (v) (w) x y z
+
 [[Category:Indimi z’igihinde-buraya]]
