*Empty MediaWiki Message*

--- a/Icyaragoneze.mw
+++ b/Icyaragoneze.mw
@@ -10,3 +10,71 @@
 *http://an.wikipedia.org/wiki/Portalada
 
 [[Category:Indimi z’igihinde-buraya]]
+
+[[ar:لغة أراغونية]]
+[[an:Idioma aragonés]]
+[[frp:Aragonês]]
+[[ast:Aragonés]]
+[[be:Арагонская мова]]
+[[br:Aragoneg]]
+[[bg:Арагонски език]]
+[[ca:Aragonès]]
+[[cv:Арагон чĕлхи]]
+[[cs:Aragonština]]
+[[co:Lingua aragunesa]]
+[[cy:Aragoneg]]
+[[da:Aragonisk (sprog)]]
+[[de:Aragonesische Sprache]]
+[[en:Aragonese language]]
+[[es:Idioma aragonés]]
+[[eo:Aragona lingvo]]
+[[ext:Luenga aragonesa]]
+[[eu:Aragoiera]]
+[[fr:Aragonais]]
+[[ga:An Aragóinis]]
+[[gv:Aragonish]]
+[[gl:Lingua aragonesa]]
+[[hak:Â-lâ-kung-ngî]]
+[[ko:아라곤어]]
+[[hr:Aragonski jezik]]
+[[id:Bahasa Aragon]]
+[[ia:Lingua aragonese]]
+[[is:Aragónska]]
+[[it:Lingua aragonese]]
+[[he:אראגונית]]
+[[kw:Aragonek]]
+[[ku:Zimanê aragonî]]
+[[la:Lingua Aragonensis]]
+[[lv:Aragoniešu valoda]]
+[[lij:Lengua aragoneise]]
+[[li:Aragonees]]
+[[hu:Aragóniai nyelv]]
+[[mk:Арагонски јазик]]
+[[mi:Reo Aragon]]
+[[ms:Bahasa Aragones]]
+[[mwl:Aragonés]]
+[[nl:Aragonees]]
+[[ja:アラゴン語]]
+[[no:Aragonesisk]]
+[[oc:Aragonés]]
+[[pnb:اراغونی بولی]]
+[[pms:Lenga aragonèisa]]
+[[nds:Aragoonsche Spraak]]
+[[pl:Język aragoński]]
+[[pt:Língua aragonesa]]
+[[ro:Limba aragoneză]]
+[[ru:Арагонский язык]]
+[[se:Aragoniagiella]]
+[[simple:Aragonese language]]
+[[sr:Арагонски језик]]
+[[sh:Aragonski jezik]]
+[[fi:Aragonian kieli]]
+[[sv:Aragonska]]
+[[ta:ஆராகோனீசிய மொழி]]
+[[tet:Lia-aragonés]]
+[[th:ภาษาอารากอน]]
+[[tr:Aragonca]]
+[[uk:Арагонська мова]]
+[[ug:ئاراگون تىلى]]
+[[wuu:阿拉贡语]]
+[[zh:阿拉贡语]]
