--- a/Icyace.mw
+++ b/Icyace.mw
@@ -45,6 +45,9 @@
 * '''duwaplôh lapan''' – makumyabiri n’umunani
 * '''duwaplôh sikureuëng''' – makumyabiri n’icyenda
 
+== Wikipediya mu cyace ==
+*http://ace.wikipedia.org/wiki/Ôn_Keuë
+
 == Imiyoboro ==
 *[http://www.ethnologue.com/show_language.asp?code=ace www.ethnologue.com]
 [[Category:Indimi]]
