*Empty MediaWiki Message*

--- a/Icyaragoneze.mw
+++ b/Icyaragoneze.mw
@@ -6,7 +6,7 @@
 *A (Á) B C (CH) D E (É) F G (H) I (Í) (J) (K) L (LL) M N Ñ O (Ó) P Q R (RR) S T U (Ú) (V) (W) X Y Z
 *a (á) b c (ch) d e (é) f g (h) i (í) (j) (k) l (ll) m n ñ o (ó) p q r (rr) s t u (ú) (v) (w) x y z
 
-== Wikipediya mu Icyaragoneze ==
+== Wikipediya mu cyaragoneze ==
 *http://an.wikipedia.org/wiki/Portalada
 
 [[Category:Indimi z’igihinde-buraya]]
