--- a/Icyaragoneze.mw
+++ b/Icyaragoneze.mw
@@ -6,6 +6,13 @@
 *A (Á) B C (CH) D E (É) F G (H) I (Í) (J) (K) L (LL) M N Ñ O (Ó) P Q R (RR) S T U (Ú) (V) (W) X Y Z
 *a (á) b c (ch) d e (é) f g (h) i (í) (j) (k) l (ll) m n ñ o (ó) p q r (rr) s t u (ú) (v) (w) x y z
 
+== Amagambo n'interuro mu cyaragoneze == 
+* '''can''' – imbwa
+* '''gato''' – injangwe
+* '''baca''' – inka
+* '''au''' / '''abe''' – inyoni
+* '''pex''' – ifi
+
 == Wikipediya mu cyaragoneze ==
 *http://an.wikipedia.org/wiki/Portalada
 
