/* Amagambo n'interuro mu cyaragoneze */

--- a/Icyaragoneze.mw
+++ b/Icyaragoneze.mw
@@ -13,6 +13,18 @@
 * '''au''' / '''abe''' – inyoni
 * '''pex''' – ifi
 
+== Imibare ==
+* '''un / uno''' – rimwe
+* '''dos''' – kabiri
+* '''tres''' – gatatu
+* '''cuatro / cuatre''' – kane
+* '''zinco / zingo''' – gatanu
+* '''seis / sais''' – gatandatu
+* '''siete / siet''' – karindwi
+* '''güeito / ueito''' – umunani
+* '''nueu''' – icyenda
+* '''diez''' – icumi
+
 == Wikipediya mu cyaragoneze ==
 *http://an.wikipedia.org/wiki/Portalada
 
