--- a/Igiceceni.mw
+++ b/Igiceceni.mw
@@ -136,6 +136,9 @@
 |Ӏ Ӏ||Ӏа||J j||ja||/ʡ/, /ˤ/
 |}
 
+== Wikipediya mu giceceni ==
+*http://ce.wikipedia.org/wiki/Коьрта_агIо
+
 [[Category:Indimi]]
 
 [[af:Tsjetsjnies]]
