--- a/Ikilazi.mw
+++ b/Ikilazi.mw
@@ -52,6 +52,9 @@ Ikilazi kigizwe n’inyuguti 35 : a b c ç ç̌ d e f g ğ h x i j k ǩ q l m n 
 *'''nçxoro''' – icyenda
 *'''vit''' – icyenda
 
+== Wikipediya mu kilazi ==
+*http://incubator.wikimedia.org/wiki/Wp/lzz
+
 == Imiyoboro == 
 *[http://www.lazuri.com/oxomonduli.html www.lazuri.com] <font color="grey">(mu gituruki)</font>
 
