--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -63,6 +63,9 @@
 | style="width:3em; text-align:center; padding: 3px;" | Я я
 |}
 
+== Wikipediya mu kimokisha ==
+*http://mdf.wikipedia.org/wiki/Пря_лопа
+
 [[Category:Indimi]]
 
 [[af:Moksja]]
