/* Amagambo n'interuro mu kimokisha */

--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -9,18 +9,23 @@
 *'''нармонь''' &ndash; '''нармоттне''' inyoni &ndash; inyoni
 
 == Amagambo n'interuro mu kimokisha ==
-
-*'''аля''' &ndash; umugabo 
-*'''ава''' &ndash; umugore 
-*'''лем''' &ndash; izina
-*'''куд''' &ndash; inzu
-*'''лофца''' &ndash; amata
-*'''акша''' &ndash; umweru
-*'''фкя''' &ndash; rimwe
-*'''кафта''' &ndash; kabiri
-*'''колма''' &ndash; gatatu
-*'''ниле''' &ndash; kane
-*'''вете''' &ndash; gatanu
+* '''Кода тонь лемце?''' – Witwa nde?
+* '''Монь лемозе ... ''' – Nitwa ... 
+* '''Пара азан''' – Murakoze
+* '''Пара''' – Meza
+* '''Ина / Эле''' – Yego
+* '''Аш''' – Oya
+* '''аля''' &ndash; umugabo 
+* '''ава''' &ndash; umugore 
+* '''лем''' &ndash; izina
+* '''куд''' &ndash; inzu
+* '''лофца''' &ndash; amata
+* '''акша''' &ndash; umweru
+* '''фкя''' &ndash; rimwe
+* '''кафта''' &ndash; kabiri
+* '''колма''' &ndash; gatatu
+* '''ниле''' &ndash; kane
+* '''вете''' &ndash; gatanu
 
 == Alfabeti y’ikimokisha ==
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
