*Empty MediaWiki Message*

--- a/Ikimokisha.mw
+++ b/Ikimokisha.mw
@@ -1,3 +1,5 @@
+[[File:Mordovia03.png|thumb|250px|<font color="grey">Ikarita y’Ikimokisha</font>]]
+
 '''Ikimokisha''' (izina mu kimokisha: ''Мокшень кяль'' cyangwa ''mokshanj kälj'' ) ni [[ururimi]] rw’[[abamokisha]] na rwa [[Morodoviya]]. Itegekongenga [[ISO 639-3]] '''mdf'''.
 
 == umugereka – ubuke ==
