--- a/Ikiyapani.mw
+++ b/Ikiyapani.mw
@@ -337,6 +337,9 @@
 |bgcolor="#F3F5DE"|ピョ ''pyo''
 |}
 
+== Wikipediya mu kimokisha ==
+*http://ja.wikipedia.org/wiki/メインページ
+
 [[Category:Indimi]]
 [[Category:Ubuyapani]]
 
