/* Wikipediya mu kimokisha */

--- a/Ikiyapani.mw
+++ b/Ikiyapani.mw
@@ -337,7 +337,7 @@
 |bgcolor="#F3F5DE"|ピョ ''pyo''
 |}
 
-== Wikipediya mu kimokisha ==
+== Wikipediya mu kiyapani ==
 *http://ja.wikipedia.org/wiki/メインページ
 
 [[Category:Indimi]]
