*Empty MediaWiki Message*

--- a/Igikuyu.mw
+++ b/Igikuyu.mw
@@ -2,6 +2,9 @@
 
 Muri iyi nyandiko, ndibanda cyane ku magambo izi ndimi zombi zisangiye, imiterere y’amagambo hamwe n’amategeko agenga imivugire y’uru rurimi.
 
+== Wikipediya mu gikuyu ==
+*http://ki.wikipedia.org/wiki/Main_Page
+
 [[Category:Indimi z’ikibantu]]
 [[Category:Kenya]]
 
