--- a/Igiswahili.mw
+++ b/Igiswahili.mw
@@ -26,6 +26,9 @@ Igiswahili kigizwe n'inyuguti 24 : a b c d e f g h i j k l m n o p r s t u v w y
 |}
 </center>
 
+== Wikipediya mu giswahili  ==
+*http://sw.wikipedia.org/wiki/Mwanzo
+
 == Imiyoboro ==
 * http://www.izuba.org.rw/index.php?issue=120&article=1725
 
