--- a/Ikirundi.mw
+++ b/Ikirundi.mw
@@ -4,6 +4,9 @@
 *'''icongereza''' icyongereza
 *'''canke''' cyangwa
   
+== Wikipediya mu kirundi ==
+*http://rn.wikipedia.org/wiki/Main_Page
+
 [[Category:Indimi z’ikibantu]]
 [[Category:Burundi]]
 
