--- a/Igiturukimeni.mw
+++ b/Igiturukimeni.mw
@@ -28,6 +28,9 @@
 |}
 </center>
 
+== Wikipediya mu giturukimeni ==
+*http://tk.wikipedia.org/wiki/Baş_Sahypa
+
 [[Category:Indimi z’ikinyaturukiya]]
 
 [[am:ቱርክመንኛ]]
