--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -78,6 +78,9 @@ Ikinyaturukiya kigizwe n’inyuguti 29 : a b c ç d e f g ğ h ı i j k l m n o 
 * '''Yiyorsunuz''' – Murarya
 * '''Yiyorlar''' – Bararya
 
+== Wikipediya mu gituruki ==
+*http://tr.wikipedia.org/wiki/Ana_Sayfa
+
 == Imiyoboro ==
 * [http://tdk.org.tr/TR/Genel/Ana.aspx?F6E10F8892433CFFAAF6AA849816B2EF4376734BED947CDE Türk Dil Kurumu] <font color="grey">(mu kinyaturukiya)</font>
 
