*Empty MediaWiki Message*

--- a/Ikidage.mw
+++ b/Ikidage.mw
@@ -36,6 +36,8 @@ Umugore = eine Frau
 
 Umwana = ein Kind
 
+== Wikipediya mu kidage ==
+*http://de.wikipedia.org/wiki/Wikipedia:Hauptseite
 
 {{DEFAULTSORT:Dage}}
 
