--- a/Icyalubaniya.mw
+++ b/Icyalubaniya.mw
@@ -20,7 +20,7 @@ Icyalubaniya kigizwe n’inyuguti 36 : a b c ç d dh e ë f g gj h i j k l ll m 
 |}
 </center>
 
-== Wikipediya mu kidage ==
+== Wikipediya mu cyalubaniya ==
 *http://sq.wikipedia.org/wiki/Faqja_Kryesore
 
 [[Category:Indimi z’igihinde-buraya]]
