*Empty MediaWiki Message*

--- a/Igifaransa.mw
+++ b/Igifaransa.mw
@@ -2,6 +2,9 @@
 
 '''Igifaransa''' (izina mu gifaransa : ''Français'' ) ni [[ururimi]] ruvugwa mu bihugu by’[[Ubufaransa]], [[Ubusuwisi]] n’[[Ububirigi]]. Itegekongenga [[ISO 639-3]] '''fra'''.
 
+== Wikipediya mu gifaransa ==
+*http://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Accueil_principal
+
 [[Category:Indimi z’igihinde-buraya]]
 
 [[ace:Bahsa Peurancih]]
