/* Amagambo n'interuro mu gifero */

--- a/Igifero.mw
+++ b/Igifero.mw
@@ -31,6 +31,9 @@ Igifero kigizwe n’inyuguti 29 : a á b d ð e f g h i í j k l m n o ó p r s 
 *'''níggju''' – icyenda
 *'''tíggju''' – icumi
 
+== Wikipediya mu gifero ==
+*http://fo.wikipedia.org/wiki/Føroyskt_mál
+
 [[Category:Indimi z’igihinde-buraya]]
 
 [[af:Faroëes]]
