*Empty MediaWiki Message*

--- a/Ikilatini.mw
+++ b/Ikilatini.mw
@@ -17,6 +17,8 @@
 |}
 </center>
 
+== Wikipediya mu kilatini ==
+*http://la.wikipedia.org/wiki/Pagina_prima
 
 [[Category:Indimi z’igihinde-buraya]]
 
