--- a/Ikinyafurikansi.mw
+++ b/Ikinyafurikansi.mw
@@ -2,6 +2,9 @@
 
 '''Ikinyafurikansi''' cyangwa '''Icyafurikanzi''' (izina mu kinyafurikansi : ''Afrikaans''  ) ni [[ururimi]] rwa [[Afurika y’Epfo]], [[Namibiya]], [[Botswana]], [[Lesoto]], [[Swazilande]], [[Zambiya]], [[Zimbabwe]] na [[Malawi]]. Itegekongenga [[ISO 639-3]] '''afr'''.
 
+== Wikipediya mu kinyafurikansi ==
+*http://af.wikipedia.org/wiki/Tuisblad
+
 [[Category:Indimi z’igihinde-buraya]]
 
 [[af:Afrikaans]]
