*Empty MediaWiki Message*

--- a/Arumeniya.mw
+++ b/Arumeniya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Armenia.svg|thumb|250px|<font color="grey">Ibendera ry’Arumeniya</font>]]
 [[File:Armenia (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Arumeniya</font>]]
 
-'''Aligeriya''' (izina mu [[kinyarumeniya]] : ''Հայաստան'' ) n’[[igihugu]] muri [[Aziya]].
+'''Aligeriya''' (izina mu [[cyarumeniya]] : ''Հայաստան'' ) n’[[igihugu]] muri [[Aziya]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
