*Empty MediaWiki Message*

--- a/Umusigiti_mukuru_muri_Koweti.mw
+++ b/Umusigiti_mukuru_muri_Koweti.mw
@@ -5,7 +5,7 @@
 [[Category:Imisigiti]]
 [[Category:Koweti]]
 
-[[ar:المسجد الكبير]]
+[[ar:المسجد الكبير (الكويت)]]
 [[de:Große Moschee Kuwait]]
 [[en:Grand Mosque (Kuwait)]]
 [[fr:Grande Mosquée de Koweit]]
