--- a/Icyarumeniya.mw
+++ b/Icyarumeniya.mw
@@ -1,3 +1,7 @@
 '''Icyarumeniya''' (izina mu cyaragoneze : ''Հայերեն'' ) ni [[ururimi]] rwa [[Arumeniya]] na [[Turukiya]]. Itegekongenga [[ISO 639-3]] '''hye'''.
 
+== Alfabeti y’Icyarumeniya ==
+ *ա բ գ դ ե զ է ը թ ժ ի լ խ ծ կ հ ձ ղ ճ մ յ ն շ ո չ պ ջ ռ ս վ տ ր ց ւ փ ք օ ֆ ու և
+
+
 [[Category:Indimi z’igihinde-buraya]]
