*Empty MediaWiki Message*

--- a/Icyarumeniya.mw
+++ b/Icyarumeniya.mw
@@ -1,7 +1,13 @@
 '''Icyarumeniya''' (izina mu cyaragoneze : ''Հայերեն'' ) ni [[ururimi]] rwa [[Arumeniya]] na [[Turukiya]]. Itegekongenga [[ISO 639-3]] '''hye'''.
 
 == Alfabeti y’Icyarumeniya ==
- *ա բ գ դ ե զ է ը թ ժ ի լ խ ծ կ հ ձ ղ ճ մ յ ն շ ո չ պ ջ ռ ս վ տ ր ց ւ փ ք օ ֆ ու և
+*ա բ գ դ ե զ է ը թ ժ ի լ խ ծ կ հ ձ ղ ճ մ յ ն շ ո չ պ ջ ռ ս վ տ ր ց ւ փ ք օ ֆ ու և
 
+== Amagambo n'interuro mu cyarumeniya ==
+* '''բարև''' – Muraho
+* '''բարի գալուստ''' – Murakaza neza 
+* '''ո՞նց եք?''' – Amakuru? 
+* '''այո''' – Yego
+* '''ոչ''' – Oya
 
 [[Category:Indimi z’igihinde-buraya]]
