/* Amagambo n'interuro mu cyarumeniya */

--- a/Icyarumeniya.mw
+++ b/Icyarumeniya.mw
@@ -10,4 +10,7 @@
 * '''այո''' – Yego
 * '''ոչ''' – Oya
 
+== Wikipediya mu cyarumeniya ==
+*http://hy.wikipedia.org/wiki/Գլխավոր_Էջ
+
 [[Category:Indimi z’igihinde-buraya]]
