--- a/Icyarumeniya.mw
+++ b/Icyarumeniya.mw
@@ -14,3 +14,95 @@
 *http://hy.wikipedia.org/wiki/Գլխավոր_Էջ
 
 [[Category:Indimi z’igihinde-buraya]]
+
+[[af:Armeens]]
+[[am:አርሜንኛ]]
+[[ar:لغة أرمنية]]
+[[an:Idioma armenio]]
+[[ast:Armeniu]]
+[[az:Erməni dili]]
+[[bn:আর্মেনীয় ভাষা]]
+[[be:Армянская мова]]
+[[be-x-old:Армянская мова]]
+[[bg:Арменски език]]
+[[ca:Armeni]]
+[[cv:Эрмен чĕлхи]]
+[[ceb:Pinulongang Armenyanhon]]
+[[cs:Arménština]]
+[[cy:Armeneg]]
+[[da:Armensk (sprog)]]
+[[de:Armenische Sprache]]
+[[et:Armeenia keel]]
+[[el:Αρμενική γλώσσα]]
+[[en:Armenian language]]
+[[es:Idioma armenio]]
+[[eo:Armena lingvo]]
+[[eu:Armeniera]]
+[[fa:زبان ارمنی]]
+[[fr:Arménien]]
+[[ga:An Airméinis]]
+[[gv:Armeainish]]
+[[gl:Lingua armenia]]
+[[glk:أرمنی زوان]]
+[[ko:아르메니아어]]
+[[hy:Հայերեն]]
+[[hi:आर्मेनियन भाषा]]
+[[hsb:Armenšćina]]
+[[hr:Armenski jezik]]
+[[io:Armeniana linguo]]
+[[id:Bahasa Armenia]]
+[[os:Сомихаг æвзаг]]
+[[is:Armenska]]
+[[it:Lingua armena]]
+[[he:ארמנית]]
+[[jv:Basa Arménia]]
+[[ka:სომხური ენა]]
+[[kv:Армяна кыв]]
+[[ku:Zimanê ermenî]]
+[[la:Lingua Armenica]]
+[[lv:Armēņu valoda]]
+[[lt:Armėnų kalba]]
+[[lij:Lengua armenn-a]]
+[[li:Armeens]]
+[[hu:Örmény nyelv]]
+[[mk:Ерменски јазик]]
+[[mr:आर्मेनियन भाषा]]
+[[arz:ارمنلى]]
+[[ms:Bahasa Armenia]]
+[[mdf:Армянонь кяль]]
+[[nl:Armeens]]
+[[new:आर्मेनियन भाषा]]
+[[ja:アルメニア語]]
+[[no:Armensk]]
+[[nn:Armensk]]
+[[oc:Armèni]]
+[[pnb:آرمینیائی]]
+[[pl:Język ormiański]]
+[[pt:Língua arménia]]
+[[ro:Limba armeană]]
+[[qu:Arminya simi]]
+[[ru:Армянский язык]]
+[[se:Armeenalaš gielat]]
+[[sco:Armenie leid]]
+[[sq:Gjuha armene]]
+[[simple:Armenian language]]
+[[sk:Arménčina]]
+[[sl:Armenščina]]
+[[szl:Uormjańsko godka]]
+[[sr:Јерменски језик]]
+[[sh:Jermenski jezik]]
+[[fi:Armenian kieli]]
+[[sv:Armeniska]]
+[[ta:அருமேனிய மொழி]]
+[[tt:Әрмән теле]]
+[[th:ภาษาอาร์เมเนีย]]
+[[tg:Забони арманӣ]]
+[[tr:Ermenice]]
+[[uk:Вірменська мова]]
+[[ur:آرمینیائی]]
+[[ug:ئەرمەن تىلى]]
+[[vi:Tiếng Armenia]]
+[[wa:Årmenyin]]
+[[yo:Èdè Arméníà]]
+[[diq:Ermeniki]]
+[[zh:亚美尼亚语]]
