*Empty MediaWiki Message*

--- a/Icyarabu.mw
+++ b/Icyarabu.mw
@@ -5,7 +5,7 @@
 
 [[Abayisilamu]] bazi ko icyarabu ari rwo rurimi rwera.
 
-== Amagambo n'interuro mu cyarabu ==
+== Amagambo n’interuro mu cyarabu ==
 
 * '''مرحبًا''' – Muraho
 * '''أهلا''' – Murakaza neza 
