*Empty MediaWiki Message*

--- a/Igikatalani.mw
+++ b/Igikatalani.mw
@@ -2,4 +2,15 @@
 
 '''Igikatalani''' (izina mu gikatalani : ''català'' na ''valencià'' ) ni [[ururimi]] rwa [[Esipanye]] ([[Kataloniya]], [[Valençia]], [[Ibirwa bya Balear]]) na [[Andora]]. Itegekongenga [[ISO 639-3]] '''cat'''.
 
+== Amagambo n'interuro mu gikatalani ==
+
+* '''Hola''' – Muraho
+* '''Adéu''' – Mwirirwe ''cyangwa'' Muramuke ''cyangwa'' Murabeho
+* '''Gràcies''' – Murakoze
+* '''Sí''' – Yego
+* '''No''' – Oya
+
+== Wikipediya mu gikatalani ==
+*http://ca.wikipedia.org/wiki/Portada
+
 [[Category:Indimi z’igihinde-buraya]]
