--- a/Igikatalani.mw
+++ b/Igikatalani.mw
@@ -2,6 +2,11 @@
 
 '''Igikatalani''' (izina mu gikatalani : ''català'' na ''valencià'' ) ni [[ururimi]] rwa [[Esipanye]] ([[Kataloniya]], [[Valençia]], [[Ibirwa bya Balear]]) na [[Andora]]. Itegekongenga [[ISO 639-3]] '''cat'''.
 
+== Alfabeti y’igikatalani ==
+Igikatalani kigizwe n’inyuguti 26 : a (à) b c (ç) d e (é è) f g h i (í ï) j k l (l·l ll) m n o (ó ò) p q r s t u (ú ü) v w x y z
+:inyajwi 5 : a (à) e (é è) i (í ï) o (ó ò) u (ú ü) 
+:indagi 21 : b c (ç) d f g h j k l (l·l ll) m n p q r s t v w x y z
+
 == Amagambo n'interuro mu gikatalani ==
 
 * '''Hola''' – Muraho
