/* Amagambo n'interuro mu gikatalani */

--- a/Igikatalani.mw
+++ b/Igikatalani.mw
@@ -15,6 +15,48 @@ Igikatalani kigizwe n’inyuguti 26 : a (à) b c (ç) d e (é è) f g h i (í ï
 * '''Sí''' – Yego
 * '''No''' – Oya
 
+== Imibare == 
+* '''nombre''' – umubare
+* '''nombres''' – imibare
+* '''u / un''' – rimwe
+* '''dos''' – kabiri
+* '''tres''' – gatatu
+* '''quatre''' – kane
+* '''cinc''' – gatanu
+* '''sis''' – gatandatu
+* '''set''' – karindwi
+* '''vuit / huit''' – umunani
+* '''nou''' – icyenda
+* '''deu''' – icumi
+* '''onze''' – cumi na rimwe
+* '''dotze''' – cumi na kaviri
+* '''tretze''' – cumi na gatatu
+* '''catorze''' – cumi na kane
+* '''quinze''' – cumi na gatanu
+* '''setze''' – cumi na gatandatu
+* '''disset / desset / dèsset''' – cumi na karindwi
+* '''divuit / díhuit / devuit''' – cumi n’umunani
+* '''dinou / denou /dènou''' – cumi n’icyenda
+* '''vint''' – makumyabiri
+* '''vint-i-u''' – makumyabiri na rimwe
+* '''vint-i-dos''' – makumyabiri na kaviri
+* '''vint-i-tres''' – makumyabiri na gatatu
+* '''vint-i-quatre''' – makumyabiri na kane
+* '''vint-i-cinc''' – makumyabiri na gatanu
+* '''vint-i-sis''' – makumyabiri na gatandatu
+* '''vint-i-set''' – makumyabiri na karindwi
+* '''vint-i-vuit / vint-i-huit''' – makumyabiri n’umunani
+* '''vint-i-nou''' – makumyabiri n’icyenda 
+* '''trenta''' – mirongo itatu
+* '''quaranta''' – mirongo ine
+* '''cinquanta''' – mirongo itanu
+* '''seixanta''' – mirongo itandatu
+* '''setanta''' – mirongo irindwi
+* '''vuitanta / huitanta''' – mirongo inani
+* '''noranta''' – mirongo cyenda
+* '''cent''' – ijana
+* '''mil''' – igihumbi
+
 == Wikipediya mu gikatalani ==
 *http://ca.wikipedia.org/wiki/Portada
 
