*Empty MediaWiki Message*

--- a/Igikatalani.mw
+++ b/Igikatalani.mw
@@ -61,3 +61,124 @@ Igikatalani kigizwe n’inyuguti 26 : a (à) b c (ç) d e (é è) f g h i (í ï
 *http://ca.wikipedia.org/wiki/Portada
 
 [[Category:Indimi z’igihinde-buraya]]
+
+[[af:Katalaans]]
+[[als:Katalanische Sprache]]
+[[ang:Catalan sprǣc]]
+[[ar:لغة كتلانية]]
+[[an:Idioma catalán]]
+[[frp:Catalan]]
+[[ast:Catalán]]
+[[az:Katalon dili]]
+[[bn:কাতালান ভাষা]]
+[[zh-min-nan:Catalunya-gí]]
+[[ba:Каталан теле]]
+[[be:Каталонская мова]]
+[[be-x-old:Каталянская мова]]
+[[bcl:Katalan]]
+[[bs:Katalonski jezik]]
+[[br:Katalaneg]]
+[[bg:Каталонски език]]
+[[ca:Català]]
+[[ceb:Pinulongang Katalan]]
+[[cs:Katalánština]]
+[[co:Lingua catalana]]
+[[cy:Catalaneg]]
+[[da:Catalansk (sprog)]]
+[[de:Katalanische Sprache]]
+[[en:Catalan language]]
+[[et:Katalaani keel]]
+[[el:Καταλανική γλώσσα]]
+[[eml:Catalàn]]
+[[es:Idioma catalán]]
+[[eo:Kataluna lingvo]]
+[[ext:Luenga catalana]]
+[[eu:Katalan]]
+[[fa:زبان کاتالان]]
+[[fo:Katalanskt mál]]
+[[fr:Catalan]]
+[[fy:Katalaansk]]
+[[fur:Lenghe catalane]]
+[[ga:An Chatalóinis]]
+[[gv:Cataloanish]]
+[[gd:Catalanais]]
+[[gl:Lingua catalá]]
+[[hak:Kâ-thai-lò-nì-â-ngî]]
+[[ko:카탈루냐어]]
+[[hy:Կատալաներեն]]
+[[hr:Katalonski jezik]]
+[[io:Kataluniana linguo]]
+[[ilo:Llengua catalana]]
+[[id:Bahasa Katalan]]
+[[ia:Lingua catalan]]
+[[os:Каталайнаг æвзаг]]
+[[is:Katalónska]]
+[[it:Lingua catalana]]
+[[he:קטלאנית]]
+[[ka:კატალანური ენა]]
+[[kw:Katalanek]]
+[[ku:Zimanê katalonî]]
+[[lad:Lingua katalana]]
+[[la:Lingua Catalana]]
+[[lv:Katalāņu valoda]]
+[[lt:Katalonų kalba]]
+[[lij:Lengua catalann-a]]
+[[li:Catalaans]]
+[[lmo:Catalàn]]
+[[hu:Katalán nyelv]]
+[[mk:Каталонски јазик]]
+[[mr:कातालान भाषा]]
+[[arz:كاتالانى]]
+[[mzn:کاتالونیکی زیوون]]
+[[ms:Bahasa Catalonia]]
+[[mn:Каталан хэл]]
+[[nah:Catalantlahtōlli]]
+[[nl:Catalaans (taal)]]
+[[nds-nl:Kattelaans]]
+[[ja:カタルーニャ語]]
+[[ce:Katalanhoyn mott]]
+[[no:Katalansk]]
+[[nn:Katalansk språk]]
+[[nrm:Catalan]]
+[[nov:Katalanum]]
+[[oc:Catalan]]
+[[mhr:Каталан йылме]]
+[[pnb:کیٹلونی]]
+[[km:ភាសាកាតាឡាន]]
+[[pms:Lenga catalan-a]]
+[[nds:Katalaansch]]
+[[pl:Język kataloński]]
+[[pt:Língua catalã]]
+[[crh:Katalan tili]]
+[[ty:Reo Tatarūnia]]
+[[ksh:Katalonisch (Shprooch)]]
+[[ro:Limba catalană]]
+[[rm:Lingua catalana]]
+[[qu:Katalan simi]]
+[[ru:Каталанский язык]]
+[[se:Katalánagiella]]
+[[sc:Limba catalana]]
+[[sco:Catalan leid]]
+[[stq:Katalanisk]]
+[[sq:Gjuha katalane]]
+[[scn:Lingua catalana]]
+[[simple:Catalan language]]
+[[sk:Katalánčina]]
+[[sl:Katalonščina]]
+[[szl:Katalůńsko godka]]
+[[sr:Каталонски језик]]
+[[sh:Katalonski jezik]]
+[[fi:Katalaani]]
+[[sv:Katalanska]]
+[[tl:Wikang Katalan]]
+[[ta:காட்டலான் மொழி]]
+[[tet:Lia-katalaun]]
+[[th:ภาษาคาตาลัน]]
+[[tr:Katalanca]]
+[[uk:Каталонська мова]]
+[[ug:كاتالان تىلى]]
+[[vec:Łéngua catałana]]
+[[vi:Tiếng Catalan]]
+[[wa:Catalan (lingaedje)]]
+[[war:Kinatalan]]
+[[zh:加泰罗尼亚语]]
