*Empty MediaWiki Message*

--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -2,6 +2,25 @@
 
 '''Igicuvashi''' (izina mu gicuvashi : ''Чӑвашла'' cyangwa ''Чăваш чĕлхи'' ) ni [[ururimi]] rwa [[Cuvashiya]], [[Tatarisitani]] mu [[Burusiya]]. Itegekongenga [[ISO 639-3]] '''chv'''.
 
+== umugereka – ubuke ==
+
+*  -'''сем''' :
+** '''Чăваш''' – '''Чăвашсем''' Umucuvashi – Abacuvashi
+** '''хăлха''' – '''хăлхасем''' ugutwi – amatwi
+** '''ура''' – '''урасем''' ikirenge – ibirenge
+** '''йывӑҫ''' – '''йывӑҫсем''' igiti – ibiti
+** '''чул''' – '''чулсем''' ibuye – amabuye
+** '''пулӑ''' – '''пулӑсем''' ifi – amafi
+** '''хӗрарӑм''' – '''хӗрарӑмсем''' umugore – abagore 
+** '''ар ҫын''' – '''ар ҫынсем''' umugabo – abagabo  
+** '''ача''' – '''ачасем''' umwana – abwana
+** '''алӑ''' – '''алӑсем''' ukuboko – amaboko (''cyangwa'' ikiganza – ibiganza):
+** '''ҫурт''' – '''ҫуртсем''' inzu – amazu
+** '''шӑл''' – '''шӑлсем''' iryinyo – amenyo
+** '''ҫӑмарта''' – '''ҫӑмартасем''' igi – amagi
+** '''кӗнеке''' – '''кӗнекесем''' igitabo – ibitabo
+** '''ӗне''' – '''ӗнесем''' inka – inka
+
 == Amagambo n'interuro mu gicuvashi ==
 
 == Imibare ==
