/* Amagambo n'interuro mu gicuvashi */

--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -22,6 +22,18 @@
 ** '''ӗне''' – '''ӗнесем''' inka – inka
 
 == Amagambo n'interuro mu gicuvashi ==
+* '''тата''' – na
+* '''пыл хурчӗ''' – uruyuki
+* '''кайӑк''' – inyoni
+
+== Amabara ==
+* '''шурӑ''' – umweru
+* '''хура''' – umukara
+* '''хӗрлӗ''' – umutuku
+* '''сарӑ''' – umuhondo
+* '''кӑвак''' – ubururu
+* '''симӗс''' – icatsi
+* '''хӑмӑр''' – ikigina
 
 == Imibare ==
 
