--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -51,8 +51,16 @@
 * '''хӑмӑр''' – ikigina
 
 == Imibare ==
-
-
+* '''пӗрре''' – rimwe
+* '''иккӗ''' – kabiri
+* '''виҫҫӗ''' – gatatu
+* '''тӑваттӑ''' – kane
+* '''пиллӗк''' – gatanu
+* '''улттӑ''' – gatandatu
+* '''ҫиччӗ''' – karindwi
+* '''саккӑр''' – umunani
+* '''тӑххӑр''' – icyenda
+* '''вуннӑ''' – icumi
 
 == Wikipediya mu gicuvashi ==
 *http://cv.wikipedia.org/wiki/Тĕп_страница
