--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -61,6 +61,19 @@
 * '''саккӑр''' – umunani
 * '''тӑххӑр''' – icyenda
 * '''вуннӑ''' – icumi
+* '''вунпӗр''' – cumi na rimwe
+* '''вуниккӗ''' – cumi na kaviri
+* '''вунвиҫҫӗ''' – cumi na gatatu
+* '''вунтӑваттӑ''' – cumi na kane
+* '''вунпиллӗк''' – cumi na gatanu
+* '''вунулттӑ''' – cumi na gatandatu
+* '''вунҫиччӗ''' – cumi na karindwi
+* '''вунсаккӑр''' – cumi n’umunani
+* '''вунтӑххӑр''' – cumi n’icyenda
+* '''ҫирӗм''' – makumyabiri
+* '''вӑтӑр''' – mirongo itatu
+* '''хӗрӗх''' – mirongo ine
+* '''аллӑ''' – mirongo itanu
 
 == Wikipediya mu gicuvashi ==
 *http://cv.wikipedia.org/wiki/Тĕп_страница
