--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -74,6 +74,12 @@
 * '''вӑтӑр''' – mirongo itatu
 * '''хӗрӗх''' – mirongo ine
 * '''аллӑ''' – mirongo itanu
+* '''утмӑл''' – mirongo itandatu
+* '''шитмӗл''' – mirongo irindwi
+* '''сакӑрвуннӑ''' – mirongo inani
+* '''тӑхӑрвуннӑ''' – mirongo cyenda
+* '''шӗр''' – ijana
+* '''пин''' – igihumbi
 
 == Wikipediya mu gicuvashi ==
 *http://cv.wikipedia.org/wiki/Тĕп_страница
