*Empty MediaWiki Message*

--- a/Igicuvashi.mw
+++ b/Igicuvashi.mw
@@ -85,3 +85,64 @@
 *http://cv.wikipedia.org/wiki/Тĕп_страница
 
 [[Category:Indimi z’ikinyaturukiya]]
+
+[[als:Tschuwaschische Sprache]]
+[[az:Çuvaş dili]]
+[[ba:Сыуаш теле]]
+[[be-x-old:Чуваская мова]]
+[[bg:Чувашки език]]
+[[br:Tchouvacheg]]
+[[ca:Txuvaix]]
+[[crh:Çuvaş tili]]
+[[cs:Čuvaština]]
+[[cu:Чьва́шьскъ ѩꙁꙑ́къ]]
+[[cv:Чăваш чĕлхи]]
+[[de:Tschuwaschische Sprache]]
+[[en:Chuvash language]]
+[[eo:Ĉuvaŝa lingvo]]
+[[es:Idioma chuvasio]]
+[[et:Tšuvaši keel]]
+[[fa:زبان چوواشی]]
+[[fi:Tšuvassin kieli]]
+[[fr:Tchouvache]]
+[[ga:An tSuvaisis]]
+[[gag:Çuvaş dili]]
+[[he:צ'ובשית]]
+[[hi:चुवाश भाषा]]
+[[hr:Čuvaški jezik]]
+[[hu:Csuvas nyelv]]
+[[id:Bahasa Chuvash]]
+[[it:Lingua ciuvascia]]
+[[ja:チュヴァシ語]]
+[[ka:ჩუვაშური ენა]]
+[[kk:Шуаш тілі]]
+[[ko:추바시어]]
+[[ky:Чуваш тили]]
+[[lt:Čiuvašų kalba]]
+[[lv:Čuvašu valoda]]
+[[mk:Чувашки јазик]]
+[[ms:Bahasa Chuvash]]
+[[myv:Ветькень кель]]
+[[nds:Tschuwasch’sche Spraak]]
+[[new:चुवाश भाषा]]
+[[nl:Tsjoevasjisch]]
+[[nn:Tsjuvasjisk språk]]
+[[no:Tsjuvasjisk]]
+[[pl:Język czuwaski]]
+[[pms:Lenga chuvash]]
+[[pnb:شواش]]
+[[pt:Língua tchuvache]]
+[[qu:Chuwash simi]]
+[[ro:Limba ciuvașă]]
+[[ru:Чувашский язык]]
+[[sah:Чуваш тыла]]
+[[sr:Чувашки језик]]
+[[sv:Tjuvasjiska]]
+[[ta:சுவாசு மொழி]]
+[[th:ภาษาชูวัช]]
+[[tk:Çuwaş dili]]
+[[tr:Çuvaşça]]
+[[tt:Çuaş tele]]
+[[ug:چۇۋاش تىلى]]
+[[uk:Чуваська мова]]
+[[zh:楚瓦什語]]
